# Rule2DRC

./: .gitignore  KLAYOUT.md  LICENSE  README.md  bon.py  bon_scores.py  eval.py  gen_tests.py  pyproject.toml  score_generated_tests.py  score_generated_tests_codemonkey_select.py  score_generated_tests_ours.py  score_generated_tests_s_star.py  score_llm_judge.py
evaluate/: gds_to_text.py  klayout_eval.py  make_prompt.py  prompt_template.j2
refs/: klayout_docs.txt
scripts/: aggregate_bon_scores.sh  materialize_hf_dataset.py  run_bon.sh  run_gen_tests.sh  score_codemonkey_select.sh  score_generated_tests.sh  score_llm_judge.sh  score_ours.sh  score_s_star.sh
scripts/leaderboard/: run_eval.sh  summarize.py
scripts/vllm/: gpt-oss-20b.yaml  qwen3-30b-a3b-instruct-2507.yaml  run_vllm.sh
