[project]
name = "drc-bench"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jinja2>=3.1.6",
    "openai==2.14.0",
    "pillow>=10.0.0",
    "pyyaml>=6.0.3",
    "tqdm>=4.67.1",
    "questionary>=2.0.1",
    "torch==2.9.0",
    "transformers==4.56.1",
    "vllm==0.13.0; sys_platform == 'linux'",
    "datasets>=4.4.2",
    "fastapi>=0.125.0",
    "uvicorn>=0.38.0",
    "faiss-cpu>=1.13.2",
    "klayout==0.30.5",
    "matplotlib>=3.10.8",
    "beautifulsoup4>=4.14.3",
]
